# quadrupedal_autonomy

./: .gitmodules  README.md  justfile  pixi.toml
go2/go2_description/: CMakeLists.txt
go2/go2_description/config/ros_control/: unitree_ros_control.yaml
go2/go2_description/xacro/: leg.xacro  robot.xacro  robot_camera.xacro
go2/go2_gazebo/: CMakeLists.txt
go2/go2_gazebo/launch/: gazebo_mmp.launch.py
go2/go2_interface/include/go2_interface/: Go2Bridge.hpp  Go2System.hpp
go2/go2_interface/launch/: bringup_gazebo.launch.py  bringup_gazebo_mmp.launch.py
go2/go2_interface/rviz/: go2.rviz  go2_mmp.rviz  go2_quadpips.rviz
go2/go2_system/: CMakeLists.txt
go2/go2_system/include/go2_system/controllers/: LegController.h
go2/go2_system/include/go2_system/state_machine/: ControlFSMData.h  FSM_State_PerceptiveLocomotionOCS2.h
go2/go2_system/src/controllers/: LegController.cpp
go2/go2_wbc/: CMakeLists.txt
go2/go2_wbc/include/go2_wbc/: Factory.hpp  HqpSolver.hpp  HqpWbc.hpp  SqpSolver.hpp  SqpWbc.hpp  WbcBase.hpp
go2/go2_wbc/src/: Factory.cpp  HqpSolver.cpp  HqpWbc.cpp  SqpSolver.cpp  SqpWbc.cpp  Task.cpp  WbcBase.cpp
